Setting a variable to CAST(NULL as X) set the result type of the variable to X. (Bug #6598)